--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,7 @@
 /config/credentials/staging.key
 /config/credentials/production.key
 /config/credentials/test.key
+
+# Tailwind
+/app/assets/builds/*
+!/app/assets/builds/.keep
